infer/tests/codetoanalyze/cpp/errors/constructors/temp_object.cpp
../../frontend/constructors/temp_object.cpp